--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section>
       <h2>Links</h2>
       <ul>
-        <li><a href="#">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/narishcataquiz/" target="_blank">LinkedIn</a></li>
         <li><a href="#">GitHub</a></li>
         <li><a href="#">SAP Community</a></li>
       </ul>
