--- a/index.html
+++ b/index.html
@@ -65,20 +65,59 @@
     </section>
 
     <section>
-      <h2>Skills</h2>
-      <ul>
-        <li>SAP Datasphere fundamentals</li>
-        <li>Data modeling & semantic layer design</li>
-        <li>Analytics-ready data preparation</li>
-        <li>Understanding of SAP data & analytics architecture</li>
-      </ul>
-    </section>
+  <h2>Skills</h2>
+
+  <div class="card">
+    <h3>Business Intelligence & Analytics</h3>
+    <ul>
+      <li>Modeling (SAP BW on HANA, HANA Studio/Eclipse, SAP BW-IP, SAP PaPM)</li>
+      <li>Extraction (SAP S/4HANA, SAP ECC)</li>
+      <li>Reporting (SAP BOBJ, SAP BW Queries, SAP AFO)</li>
+      <li>Data validation (SAP S/4HANA, SAP ECC, SAP BW, SAP FPSL)</li>
+      <li>Data analysis and visualization (SAP BOBJ, SAP PaPM)</li>
+      <li>Planning and simulation (SAP BW-IP, SAP PaPM)</li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h3>Data Management</h3>
+    <ul>
+      <li>Data extraction</li>
+      <li>ETL process</li>
+      <li>Data mapping</li>
+      <li>Data validation</li>
+      <li>Data reconciliation</li>
+      <li>Roles and authorizations</li>
+      <li>SQL aggregates</li>
+      <li>SQL window functions</li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h3>L2 AMS Technical & Customer Support</h3>
+    <ul>
+      <li>Monitoring and scheduling reports</li>
+      <li>Monitoring and troubleshooting process chains</li>
+      <li>Documentation quality improvement</li>
+      <li>Data analysis and end-user support</li>
+      <li>Analytical and technical assistance</li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h3>Ticketing Tools</h3>
+    <ul>
+      <li>JIRA</li>
+      <li>ServiceNow</li>
+    </ul>
+  </div>
+</section>
 
     <section>
       <h2>Links</h2>
       <ul>
         <li><a href="https://www.linkedin.com/in/narishcataquiz/" target="_blank">LinkedIn</a></li>
-        <li><a href="#">GitHub</a></li>
+        <li><a href="https://github.com/narishairah/ target="_blank">GitHub</a></li>
         <li><a href="#">SAP Community</a></li>
       </ul>
     </section>
