Revise title and enhance 'About Me' section
Updated the title and modified the content in the 'About Me' section to better reflect expertise in SAP data and analytics. Added Font Awesome icons to skill headings for improved visual appeal.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Narish | SAP Datasphere Portfolio</title>
+  <title>Narish | SAP Consultant Portfolio</title>
+
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+/>
+  
   <style>
     body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif; margin: 0; background: #f7f8fa; color: #222; }
     header { background: #0a2540; color: #fff; padding: 48px 20px; }
@@ -14,13 +20,15 @@
     h2 { font-size: 24px; margin-bottom: 16px; border-bottom: 2px solid #e5e7eb; padding-bottom: 6px; }
     .card { background: #fff; border-radius: 12px; padding: 20px; box-shadow: 0 10px 20px rgba(0,0,0,0.05); margin-bottom: 20px; }
     .card h3 { margin-top: 0; }
+    .card ul { line-height: 1.6; }
+    .card h3 i { margin-right: 8px; color: #2563eb; }
     .tags span { display: inline-block; background: #eef2ff; color: #3730a3; padding: 4px 10px; border-radius: 999px; font-size: 12px; margin: 4px 6px 0 0; }
     a { color: #2563eb; text-decoration: none; }
     a:hover { text-decoration: underline; }
     footer { text-align: center; padding: 24px; font-size: 14px; color: #555; }
     .skills-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1.4fr 1fr;
   gap: 24px;
 }
 
@@ -42,9 +50,10 @@
     <section>
       <h2>About Me</h2>
       <p>
-        I am an SAP data and analytics enthusiast focusing on <strong>SAP Business Warehouse (BW) and Profitability and Performance Management (PaPM)</strong>.
-        This portfolio documents my hands-on practice using sample business scenarios,
-        highlighting my understanding of data modeling, semantic layers, and analytics-ready design.
+        With a background in <strong>SAP BW</strong> and <strong>SAP Profitability and Performance Management (PaPM)</strong>,
+I focus on SAP data and analytics solutions.
+My experience with <strong>SAP BW Integrated Planning (BW-IP)</strong> has further developed my interest in planning and simulation scenarios.
+This portfolio highlights my hands-on learning, emphasizing data modeling, semantic layers, and analytics-ready design.
       </p>
     </section>
 
@@ -81,7 +90,7 @@
 
   <div class="skills-grid">
     <div class="card">
-      <h3>Business Intelligence & Analytics</h3>
+      <h3><i class="fa-solid fa-chart-line"></i> Business Intelligence & Analytics</h3>
       <ul>
         <li>Modeling (SAP BW on HANA, HANA Studio/Eclipse, SAP BW-IP, SAP PaPM)</li>
         <li>Extraction (SAP S/4HANA, SAP ECC)</li>
@@ -93,7 +102,7 @@
     </div>
 
     <div class="card">
-      <h3>Data Management</h3>
+      <h3><i class="fa-solid fa-database"></i> Data Management</h3>
       <ul>
         <li>Data extraction</li>
         <li>ETL process</li>
@@ -107,7 +116,7 @@
     </div>
 
     <div class="card">
-      <h3>L2 AMS Technical & Customer Support</h3>
+      <h3><i class="fa-solid fa-headset"></i> L2 AMS Technical & Customer Support</h3>
       <ul>
         <li>Monitoring and scheduling reports</li>
         <li>Monitoring and troubleshooting process chains</li>
@@ -118,7 +127,7 @@
     </div>
 
     <div class="card">
-      <h3>Ticketing Tools</h3>
+      <h3><i class="fa-solid fa-ticket"></i> Ticketing Tools</h3>
       <ul>
         <li>JIRA</li>
         <li>ServiceNow</li>
