Revise title and expand 'About Me' section
Updated title and enhanced the 'About Me' section with a detailed background and focus areas.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Narish | SAP Consultant Portfolio</title>
+  <title>Narish Cataquiz| SAP Consultant Portfolio</title>
+  </p>
+      <h2>About Me</h2>
+      <p>
+        With a background in <strong>SAP Business Warehouse (BW)</strong>, <strong>SAP Business Objects (BOBJ)</strong> and <strong>SAP Profitability and Performance Management (PaPM)</strong>,
+I focus on SAP data and analytics solutions.
+My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> has further developed my interest in planning and simulation scenarios.
+This portfolio highlights my hands-on learning, emphasizing data modeling, semantic layers, and analytics-ready design.
+      </p>
 
   <link
   rel="stylesheet"
@@ -79,16 +87,8 @@
     practice, sample business scenarios, and continuous learning.
   </p>
 
-  <p style="font-style: italic; color: #6b7280;">
+  <p style="font-style: bold; color: #6b9888;">
     Current focus (2025): SAP Datasphere, SAP Analytics Cloud, and SAP HANA SQL
-  </p>
-      <h2>About Me</h2>
-      <p>
-        With a background in <strong>SAP Business Warehouse (BW)</strong>, <strong>SAP Business Objects (BOBJ)</strong> and <strong>SAP Profitability and Performance Management (PaPM)</strong>,
-I focus on SAP data and analytics solutions.
-My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> has further developed my interest in planning and simulation scenarios.
-This portfolio highlights my hands-on learning, emphasizing data modeling, semantic layers, and analytics-ready design.
-      </p>
     </section>
 
     <section>
