Revise header and 'About Me' content in index.html
Updated personal information and enhanced the 'About Me' section.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Narish Cataquiz| SAP Consultant Portfolio</title>
-  </p>
-      <h2>About Me</h2>
-      <p>
-        With a background in <strong>SAP Business Warehouse (BW)</strong>, <strong>SAP Business Objects (BOBJ)</strong> and <strong>SAP Profitability and Performance Management (PaPM)</strong>,
-I focus on SAP data and analytics solutions.
-My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> has further developed my interest in planning and simulation scenarios.
-This portfolio highlights my hands-on learning, emphasizing data modeling, semantic layers, and analytics-ready design.
-      </p>
-
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -73,8 +64,16 @@ This portfolio highlights my hands-on learning, emphasizing data modeling, seman
 </head>
 <body>
   <header>
-    <h1>Narish</h1>
+    <h2>Narish Shairah Cataquiz</h2>
     <p>SAP Consultant | Analytics & Business Intelligence | Hands-on Learning Portfolio</p>
+    </p>
+      <h1>About Me</h1>
+      <p>
+        With a background in <strong>SAP Business Warehouse (BW)</strong>, <strong>SAP Business Objects (BOBJ)</strong> and <strong>SAP Profitability and Performance Management (PaPM)</strong>,
+I focus on SAP data and analytics solutions.
+My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> has further developed my interest in planning and simulation scenarios.
+This portfolio highlights my hands-on learning, emphasizing data modeling, semantic layers, and analytics-ready design.
+      </p>
   </header>
 
   <main>
