Change paragraph style from bold to italic

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ This portfolio highlights my hands-on learning, emphasizing data modeling, seman
     practice, sample business scenarios, and continuous learning.
   </p>
 
-  <p style="font-style: bold; color: #6b9888;">
+  <p style="font-style: italic; color: #6b9888;">
     Current focus (2025): SAP Datasphere, SAP Analytics Cloud, and SAP HANA SQL
     </section>
 
