Add new skills sections to index.html

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ This portfolio highlights my hands-on learning, emphasizing data modeling, seman
       </ul>
     </div>
 
+    <div class="skills-grid">
     <div class="card">
       <h3><i class="fa-solid fa-database"></i> Data Management</h3>
       <ul>
@@ -182,6 +183,7 @@ This portfolio highlights my hands-on learning, emphasizing data modeling, seman
       </ul>
     </div>
 
+      <div class="skills-grid">
     <div class="card">
       <h3><i class="fa-solid fa-headset"></i> L2 AMS Technical & Customer Support</h3>
       <ul>
@@ -193,6 +195,7 @@ This portfolio highlights my hands-on learning, emphasizing data modeling, seman
       </ul>
     </div>
 
+        <div class="skills-grid">
     <div class="card">
       <h3><i class="fa-solid fa-ticket"></i> Ticketing Tools</h3>
       <ul>
