--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       border-radius: 12px;
       padding: 20px;
       box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+      height: 100%;
+      display: flex;
+      flex-direction: column;
     }
 
     .card h3 {
@@ -80,8 +83,9 @@
 
     .skills-grid {
       display: grid;
-      grid-template-columns: 1.4fr 1fr;
+      grid-template-columns: 1fr 1fr;
       gap: 24px;
+      align-items: stretch;
     }
 
     .badge {
