Update header and paragraph content in index.html
Removed 'Hands-on Learning Portfolio' from the header and updated the paragraph to remove the mention of hands-on learning.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
   <header>
     <h1>Narish Shairah Cataquiz</h1>
-    <p>SAP Consultant | Analytics & Business Intelligence | Hands-on Learning Portfolio</p>
+    <p>SAP Consultant | Analytics & Business Intelligence</p>
   </header>
 
   <main>
@@ -150,7 +150,7 @@
         With a background in <strong>SAP Business Warehouse (BW)</strong>,
         <strong>SAP Business Objects (BOBJ)</strong>, and
         <strong>SAP Profitability and Performance Management (PaPM)</strong>,
-        I focus on SAP data and analytics solutions.
+        I continuously strengthen my skills through hands-on learning and the application of real-world business scenarios.
       </p>
       <p>
         My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> has further
